Attempt to fix hero section resizing on mobile when scrolling

--- a/css/style.css
+++ b/css/style.css
@@ -73,7 +73,7 @@ nav>button {
 
 /* HERO SECTION */
 .hero {
-    min-height: (90lvh - 120px);
+    min-height: 500px;
     width: 100%;
     background: url('../images/nebula-background-wavy.jpg') no-repeat center center;
     background-size: cover;
